--- a/css/main.css
+++ b/css/main.css
@@ -42,3 +42,7 @@ video {
   background-color: rgba(86, 61, 124, 0.15);
   border: 1px solid rgba(86, 61, 124, 0.2);
 }
+
+.container {
+  margin: 0 30px 200px;
+}
